--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "JSONPath": "^0.10.0",
     "body-parser": "~1.12.4",
     "cobolscript": "0.0.1",
     "cookie-parser": "~1.3.5",
